--- a/Section 7/src/app/app.component.html
+++ b/Section 7/src/app/app.component.html
@@ -11,19 +11,32 @@
             <div *ngIf="onlyOdd">
                 <li
                 class="list-group-item"
+                [ngClass]="{odd: odd % 2 !== 0}"
+                [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'}"
                 *ngFor="let odd of oddNumbers">
                 {{odd}}
                 </li>
             </div>
-            <div *ngIf="!onlyOdd">
+            <!-- <div *ngIf="!onlyOdd">
                 <li
                 class="list-group-item"
+                [ngClass]="{odd: even % 2 !== 0}"
+                [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent'}"
+                *ngFor="let even of evenNumbers">
+                {{even}}
+                </li>
+            </div> -->
+            <div *appUnless="!onlyOdd">
+                <li
+                class="list-group-item"
+                [ngClass]="{odd: even % 2 !== 0}"
+                [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent'}"
                 *ngFor="let even of evenNumbers">
                 {{even}}
                 </li>
             </div>
-            
         </ul>
+        <p [appHighlight]="'red'" defaultColor="yellow" >Style me with basic directive!</p>
         <ng-template [ngIf]="onlyOdd">
             <p>Only odd</p>
         </ng-template>
