--- a/Project/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/Project/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,8 +8,7 @@
   <div class="col-xs-12">
     <app-recipe-item
         *ngFor="let item of recipes"
-        [recipe]="item"
-        (recipeClicked)="onRecipeSelected(item)">
+        [recipe]="item">
     </app-recipe-item>
   </div>
 </div>
